// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlButton should render 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 cGkEmw"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render active 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 dKJxKs"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render disabled 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 gWfCmN"
      disabled=""
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 cGkEmw"
    >
      <div
        class="flex absolute right-0 justify-center items-center -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background mr-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 bKrqtB"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton should render without border and with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <div
      class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 bKrqtB"
    >
      <div
        class="flex absolute right-0 justify-center items-center -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background -mr-1"
      >
        <div
          class="w-2 h-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
